# core

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  sui-test-plan.md  vercel.json  wallets.md  wrangler.jsonc
.claude/: settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
bindings/go/: .gitignore  Cargo.toml  README.md  build.rs  go.mod
bindings/go/.github/workflows/: go.yml
bindings/go/examples/: demo.go
bindings/go/ows/: api.go  types.go  wallet.go  wallet_test.go
bindings/go/src/: error.h  error.rs  lib.rs
bindings/node/: Cargo.toml  README.md  package-lock.json  package.json  publish.mjs
bindings/node-adapters/: README.md  package-lock.json  package.json
bindings/node-adapters/__test__/: solana-kit.spec.mjs
bindings/node-adapters/src/: solana-kit.d.ts  solana-kit.js  viem.js
bindings/node-solana/: README.md  package.json
bindings/node-solana/__test__/: index.spec.mjs
bindings/node-solana/src/: index.js  (+1 more)
bindings/node-viem/: README.md  package.json
bindings/node/__test__/: index.spec.mjs  permit.spec.mjs  store.spec.mjs
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/scripts/: postinstall.js
bindings/node/src/: lib.rs
bindings/node/src/evm/: permit.mjs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/ows/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_bindings.py
bindings/web/: Cargo.toml  README.md  index.d.ts  package.json
bindings/web/__test__/: store.spec.mjs
bindings/web/src/: index.js  lib.rs
bindings/web/src/stores/: indexeddb.js  lightning-fs.js  memory.js
discovery/bazaar/: agoragentic.json
docs/: 01-storage-format.md  02-chain-agnostic-addressing.md  02-signing-interface.md  03-policy-engine.md  03-signing-interface.md  04-agent-access-layer.md  04-policy-engine.md  05-key-isolation.md  06-agent-access-layer.md  06-wallet-lifecycle.md  07-multi-chain-support.md  07-supported-chains.md  08-wallet-lifecycle.md  chain-plugin-kit.md  policy-engine-implementation.md  quickstart.md  sdk-cli.md  sdk-node.md  sdk-python.md  sdk-web.md  x402-marketplace-guide.md  zcash-guide.md
docs/examples/: eip2612-permit.md
docs/internal/: ows-doctor-plan.md
examples/: README.md  agent-with-policy.js  x402-discover-services.js  x402-pay-request.js  x402-upto-settlement.js  x402-upto-settlement.md
examples/thoughtproof-policy/: README.md  package.json  policy.json  thoughtproof-policy.ts
lws/crates/lws-signer/: Cargo.toml
lws/crates/lws-signer/src/: crypto.rs  hd.rs  key_cache.rs  lib.rs  mnemonic.rs  process_hardening.rs  zeroizing.rs
lws/crates/lws-signer/src/chains/: mod.rs  solana.rs  ton.rs
ows/: Cargo.toml  README.md  install.sh
ows/crates/ows-cli/: Cargo.toml  README.md  build.rs
ows/crates/ows-cli/src/: audit.rs  main.rs  passphrase_cache.rs  vault.rs
ows/crates/ows-cli/src/commands/: config.rs  derive.rs  dev.rs  fund.rs  generate.rs  guardian.rs  info.rs  mod.rs  pay.rs  policy.rs  rpc.rs  send_transaction.rs  sign_message.rs  sign_permit.rs  sign_psbt.rs  sign_transaction.rs  swap.rs  uninstall.rs  update.rs  wallet.rs
ows/crates/ows-cli/src/commands/doctor/: checks.rs  mod.rs  report.rs  vault_inspector.rs
ows/crates/ows-cli/templates/chain-plugin-kit/: CONTRIBUTOR_GUIDE.md.tmpl  README.md.tmpl  caip-mapping.toml.tmpl  chain-profile.toml.tmpl  derivation-rules.toml.tmpl  serialize.stub.rs.tmpl  sign.stub.rs.tmpl
ows/crates/ows-cli/templates/chain-plugin-kit/docs/: implementation-checklist.md.tmpl  security-checklist.md.tmpl  supported-chain-entry.md.tmpl
ows/crates/ows-cli/templates/chain-plugin-kit/test-vectors/: README.md.tmpl  derivation.json.tmpl  sign-message.json.tmpl  tx-serialization.json.tmpl
ows/crates/ows-guardian/: Cargo.toml
ows/crates/ows-guardian/src/: error.rs  guardian_store.rs  heartbeat.rs  lib.rs  recovery.rs  recovery_store.rs  setup.rs  shamir.rs  types.rs
ows/crates/ows-lib/: Cargo.toml  README.md
ows/crates/ows-lib/src/: atto_rpc.rs  error.rs  fs_store.rs  key_ops.rs  key_store.rs  lib.rs  lwd_grpc.rs  migrate.rs  nano_rpc.rs  near_rpc.rs  ops.rs  policy_engine.rs  policy_store.rs  secret_store.rs  stellar_errors.rs  types.rs  vault.rs
ows/crates/ows-signer/: Cargo.toml  README.md
ows/crates/ows-signer/src/: crypto.rs  curve.rs  eip712.rs  hd.rs  key_cache.rs  lib.rs  process_hardening.rs  rlp.rs  traits.rs  zeroizing.rs
ows/crates/ows-signer/src/chains/: atto.rs  avm.rs  bitcoin.rs  cardano.rs  cosmos.rs  evm.rs  filecoin.rs  initia.rs  mod.rs  nano.rs  near.rs  solana.rs  spark.rs  stacks.rs  stellar.rs  sui.rs  ton.rs  tron.rs  xrp.rs  xrpl.rs  zcash.rs
readme/partials/: cli-reference.md  supported-chains.md  why-ows.md
readme/templates/: node.md  ows.md  python.md
scripts/: set-version.sh
sdks/python/: pyproject.toml
sdks/python/src/lws/: __init__.py  client.py  errors.py  types.py
sdks/python/tests/: test_client.py  test_types.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
skills/ows/: SKILL.md
skills/riskscope/: SKILL.md
spendos/: README.md  package-lock.json  package.json
spendos/app/: globals.css  layout.tsx  page.tsx
spendos/lib/: store.ts  types.ts
spendos/prisma/: dev.db  schema.prisma
website/: index.html
website-docs/: index.html
website-docs/js/: docs.js
website-docs/md/: 02-signing-interface.md  07-supported-chains.md  sdk-cli.md  sdk-node.md  sdk-python.md
website/css/: hljs-lws.css  hljs-ows.css  style.css
website/docs/: 01-storage-format.html  02-chain-agnostic-addressing.html  03-signing-interface.html  04-policy-engine.html  05-key-isolation.html  06-agent-access-layer.html  07-multi-chain-support.html  08-wallet-lifecycle.html  doc.html  index.html
website/js/: docs.js  main.js
(+42 files in other folders)
