[package]
name = "ows-python"
version = "0.3.9"
edition = "2021"
description = "Python native bindings for the Open Wallet Standard"

[lib]
name = "ows"
crate-type = ["cdylib"]

[dependencies]
ows-lib = { path = "../../ows/crates/ows-lib" }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
