[package]
name = "ows-web"
version = "1.3.2"
edition = "2021"
license = "MIT"
description = "Browser WASM bindings for the Open Wallet Standard"
repository = "https://github.com/open-wallet-standard/core"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
fast-kdf = ["ows-signer/fast-kdf"]

[dependencies]
chrono = "0.4"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
ows-core = { path = "../../ows/crates/ows-core", version = "=1.3.2" }
ows-signer = { path = "../../ows/crates/ows-signer", version = "=1.3.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
zeroize = "1"
