[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lws"
version = "0.1.0"
description = "Python SDK for the Local Wallet Standard (LWS) REST API"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lws"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
