[package]
name = "ows-signer"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Cryptographic signing and key management for the Open Wallet Standard"
repository = "https://github.com/open-wallet-standard/core"
readme = "README.md"

[features]
default = []
fast-kdf = []
zcash-shielded = ["zcash_keys", "zcash_protocol", "zip32", "pczt", "sapling-crypto", "orchard", "zcash_transparent"]

[dependencies]
ows-core = { path = "../ows-core", version = "=1.0.0" }
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
ed25519-dalek = { version = "2", features = ["hazmat"] }
coins-bip32 = "0.11"
coins-bip39 = "0.11"
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
bech32 = "0.11"
base64 = "0.22"
bs58 = { version = "0.5", features = ["check"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
scrypt = "0.11"
blake2 = "0.10"
digest = "0.10"
libc = "0.2"
signal-hook = "0.4"

# Zcash shielded support (unified addresses, PCZT signing) — heavy deps, feature-gated
zcash_keys = { version = "0.12", features = ["orchard", "sapling", "transparent-inputs"], optional = true }
zcash_protocol = { version = "0.7", optional = true }
zip32 = { version = "0.2", optional = true }
pczt = { version = "0.5", features = ["signer"], optional = true }
sapling-crypto = { version = "0.5", optional = true }
orchard = { version = "0.11", optional = true }
zcash_transparent = { version = "0.6", optional = true }

[dev-dependencies]
